--- a/styles/style.css
+++ b/styles/style.css
@@ -4,4 +4,74 @@
   font-style: normal;
   font-variation-settings:
     "wdth" 100;
+  background-color: rgb(245, 248, 255);
+}
+
+/** Share Styles  **/
+
+span {
+  color: #E95A08;
+}
+
+
+
+
+/** Nav Section Styles **/
+
+.nav-items {
+  max-width: 85%;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+.nav-link {
+  display: flex;
+  gap: 35px;
+  text-align: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.nav-items img {
+  max-width: 100%;
+  max-height: 100%;
+  text-align: center;
+  align-items: center;
+}
+
+.nav-link i {
+  margin-right: 10px;
+}
+
+.home-link {
+  color: black;
+  font-weight: 700;
+}
+
+.Shop-about {
+  color: #8987A1;
+}
+
+/** Hero Section Styles **/
+
+.hero-section {
+  display: flex;
+  max-width: 87%;
+  margin: 0 auto;
+  margin-top: 120px;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.hero-text p {
+  font-size: 22x;
+
+
+}
+
+.hero-photo img {
+  max-width: 100%;
+  max-height: 100%;
 }
