--- a/styles/style.css
+++ b/styles/style.css
@@ -11,9 +11,8 @@
 
 span {
   color: #E95A08;
+
 }
-
-
 
 
 /** Nav Section Styles **/
@@ -74,4 +73,63 @@ span {
 .hero-photo img {
   max-width: 100%;
   max-height: 100%;
+}
+
+/** Plants Section Styles **/
+
+.Plants-section {
+  max-width: 85%;
+  margin: 0 auto;
+  margin-top: 120px;
+}
+
+.Plant-text p {
+  margin: 0 auto;
+  margin-top: 20px;
+  color: #000000;
+  margin-bottom: 60px;
+}
+
+.card-1 img {
+  max-width: 90%;
+  max-height: 90%;
+  display: flex;
+  justify-content: center;
+  margin-left: 15px;
+}
+
+.price {
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.Plant-title {
+  font-size: 20px;
+  font-weight: 400;
+  color: black;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.card-1 {
+  max-width: 270px;
+}
+
+.btn {
+  background-color: #E95A08;
+  padding-right: 70px;
+  padding-left: 70px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: white;
+}
+
+.Plants-card {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  row-gap: 25px;
+  column-gap: 0px;
+  text-align: center;
+  align-items: center;
 }
