--- a/styles/style.css
+++ b/styles/style.css
@@ -133,3 +133,59 @@ span {
   text-align: center;
   align-items: center;
 }
+
+/* plants lover section */
+
+.plants-lover-section {
+  max-width: 85%;
+  margin: 0 auto;
+  display: flex;
+  margin-top: 200px;
+  margin-left: 200px;
+  position: relative;
+}
+
+.plants-lover-section h1 {
+  font-size: 50px;
+  font-weight: bold;
+  max-width: 450px;
+}
+
+.plants-lover-section ul li {
+  list-style: inside;
+  font-weight: 400;
+
+
+
+}
+
+.plants-lover-section img {
+  max-width: 100%;
+  max-height: 90%;
+  display: flex;
+}
+
+.inter {
+  max-width: 480px;
+}
+
+.text-style {
+  color: black;
+  text-align: left;
+  padding-left: 20px;
+
+}
+
+.plants-lover-text {
+  max-width: 540px;
+  margin-top: 40px;
+}
+
+#badge-photo {
+  max-width: 230px;
+  position: absolute;
+  left: 340px;
+  bottom: 460px;
+}
+
+/* join section */
