--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,9 @@
    font-family: Noto Serif;
  }
 
+
  .open-sans {
+
    font-family: "Open Sans", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
@@ -294,3 +296,107 @@
  #footer-text {
    font-size: 21px;
  }
+
+ /** Latest Section Style **/
+
+ .latest-section h2 {
+   font-size: 50px;
+   font-weight: bold;
+   text-align: center;
+   cursor: default;
+   margin-bottom: 10px;
+ }
+
+ .latest-section {
+   align-items: center;
+   text-align: center;
+   display: flex;
+   justify-content: center;
+   margin-top: 120px;
+   margin-bottom: 120px;
+ }
+
+
+ .latest-section p {
+   font-size: 22px;
+   text-align: center;
+   align-items: center;
+   max-width: 888px;
+   cursor: default;
+ }
+
+ /*plant photo section style*/
+
+ .plant-photo-section {
+   display: flex;
+   justify-content: center;
+   gap: 20px;
+   max-width: 1140px;
+   margin: 0 auto;
+   margin-bottom: 50px;
+
+ }
+
+
+ .off-title {
+   font-size: 20px;
+   font-weight: bold;
+   color: white;
+ }
+
+ .plant-link {
+   color: white;
+   font-size: 16px;
+   font-weight: 700;
+   text-align: center;
+   align-items: center;
+ }
+
+ .Off-style {
+   font-size: 40px;
+   font-weight: bold;
+   color: white;
+ }
+
+ .plant-photo-title {
+   text-align: center;
+ }
+
+ .photo-1 {
+   background-image: url(/assets/deal-bloom.png);
+   background-repeat: no-repeat;
+   background-size: cover;
+   max-width: 367px;
+   padding: 50px;
+   margin-bottom: 30px;
+   border-radius: 10px;
+
+ }
+
+ .photo-2 {
+   background-image: url(/assets/deal-ana.png);
+   background-repeat: no-repeat;
+   background-size: cover;
+   max-width: 367px;
+   padding: 50px;
+   margin-bottom: 30px;
+   border-radius: 10px;
+ }
+
+ .photo-3 {
+   background-image: url(/assets/deal-zabo.png);
+   background-repeat: no-repeat;
+   background-size: cover;
+   max-width: 753px;
+   padding: 100px;
+   padding-top: 130px;
+   margin-bottom: 30px;
+   border-radius: 10px;
+ }
+
+
+ .none {
+   display: none;
+ }
+
+ /* ------------------- RESPONSIVE DESIGN ------------------- */
